format error + fixed queue pieces cut off

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
   float: right;
   width: 238px;
   padding: 20px;
+  position: absolute;
+  display: inline;
 }
 
 #queueCanvas{
